--- a/src/personal/templates/personal/bet.html
+++ b/src/personal/templates/personal/bet.html
@@ -6,20 +6,12 @@
         color: black;
         display: inline;
     }
-    .white-text{
-        text-shadow: 1px 1px 2px black,
-                     0 0 1em gainsboro,
-                     0 0 0.2em gainsboro;;
-    }
     .btn{
-        border-radius: 20px;
-        border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px black;
+        border-radius: 8px;
+        background-color: #fd9801;
     }
     .btn:hover{
-        color: black;
-        background-color: white;
-        border: 2px solid #000000;
+        background-color: #fd9801;
     }
     .login-form{
         border-radius: 15px;
@@ -34,42 +26,52 @@
     .row{
         padding-bottom: 16px;
     }
-    .submit{
-        margin-left: 130px;
+    .border{
+        width: 50%;
+        height: 30%;
+       padding: 60px;
+
     }
 </style>
 <div class="container-fluid content">
     <div class="container">
         <br>
         <a href="{% url 'game' game.slug %}" class="btn">Back</a>
-        <h1 class="text-center">Bet Form</h1>
-        <div class="login-form">
-            <h3 class="white-text text-center">{{ game.team_A }} vs. {{ game.team_B }}</h3>
-            <hr>
+        <br>
+        <br>
+        <div class="container">
+            <h1 class="text-center">{{ game.team_A }} vs. {{ game.team_B }}</h1>
             <form method="post" action="{% url 'bet-placed' game.slug %}">
             {% csrf_token %}
-                <div class="row">
-                    <div class="col-sm-3 text-end">
-                        <label>Select Team:</label>
+                <div class="container border">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <label >Select Team:</label>
+                        </div>
+                        <div class="col-sm-8 white-text">
+                            <input type="radio" id="team_A" name="team" value="{{ game.team_A }}" checked>
+                            <label for="team_A">{{ game.team_A }}</label>        
+                            <input type="radio" id="team_B" name="team" value="{{ game.team_B }}">
+                            <label for="team_B">{{ game.team_B }}</label>
+                        </div>
                     </div>
-                    <div class="col-sm-9 white-text">
-                        <input type="radio" id="team_A" name="team" value="{{ game.team_A }}" checked>
-                        <label for="team_A">{{ game.team_A }}</label>        
-                        <input type="radio" id="team_B" name="team" value="{{ game.team_B }}">
-                        <label for="team_B">{{ game.team_B }}</label>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <label for="amount">Amount:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="number" id="amount" name="amount" required>
+                        </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-8">
+                            <button type="submit" class="btn">Bet</button>
+                        </div>
+                    </div>
+                    <label class="white-text">{{msg}}</label>
                 </div>
-                <div class="row">
-                    <div class="col-sm-3 text-end">
-                        <label for="amount">Amount:</label>
-                    </div>
-                    <div class="col-sm-9">
-                        <input type="number" id="amount" name="amount" required>
-                    </div>
-                </div>
-                <hr>
-                <button type="submit" class="btn submit">Bet</button>
-                <label class="white-text">{{msg}}</label>
+                
             </form>
         </div>         
     </div>
