--- a/src/templates/ModalPopup.html
+++ b/src/templates/ModalPopup.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BetLock</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
         .close{
             background-color: #fd9801;
@@ -19,6 +23,24 @@
             color: black;
             background-color: #fd9801;
         }
+        .modal-dialog {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh; 
+            width: 90%; 
+            max-width: 80vh; 
+        }
+
+        .modal-content {
+            width: 100%; 
+        }
+
+        .modal-body label {
+            text-align: right;
+            margin-right: 10px;
+        }
+     
     </style>
 </head>
 <body>
@@ -26,17 +48,37 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal Title</h5>
+                    <h5 class="modal-title" style="text-align: center;" id="exampleModalLabel"><span id="type">Type</span> Confirmation</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">X</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <p>Modal Message Here</p>
+                <div class="modal-body"  style="padding: 10vh;">
+                    <p style="color: black; font-size: 20px;">Do you want to continue with <span id="type">type</span>?</p>
+
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <label for="partnername" style="color: black;">Partner:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" placeholder="Partner" id="partnername" name="partnername" disabled>        
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-sm-4" >
+                            <label for="amount"  style="color: black;">Amount:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" placeholder="Amount" id="amount" name="amount" disabled>        
+                        </div>
+                    </div>
+
                 </div>
+                
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Yes</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-primary" id="SaveButton" data-dismiss="modal" style="width: 100px;">Yes</button>
+                    <button type="button" class="btn btn-primary" id="closeButton" data-dismiss="modal" style="width: 100px;">No</button>
                 </div>
             </div>
         </div>
@@ -46,18 +88,28 @@
 
     <script>
         $(document).ready(function(){
-            function showModal(title, message) {
-                $('#exampleModalLabel').text(title); 
-                $('.modal-body').html('<p>' + message + '</p>'); 
-                $('#modalButton').click(); 
-            }
 
+            $(document).on('click', '.close', function() {
+                $('#myModal').modal('hide');
+            });
+
+            $(document).on('click', '#closeButton', function() {
+                $('#myModal').modal('hide');
+            });
+
+            $(document).on('click', '#SaveButton', function() {
+                $('#spinnerModel').modal('hide');
+            });
+
+            $('.close').click(function() {
+                console.log("close")
+                $('#myModal').modal('hide');
+            });
+    
+            $('.modal-footer button[data-dismiss="modal"]').click(function() {
+                $('#myModal').modal('hide');
+            });
         });
     </script>
-    <style>
-    .modal-backdrop {
-    z-index: -100; 
-}
-</style>
 </body>
 </html>
