--- a/src/personal/templates/personal/send.html
+++ b/src/personal/templates/personal/send.html
@@ -41,4 +41,6 @@
                 $('#myModal').modal('show');
             }
         </script>
+        {% include 'ModalPopup.html' %}
+        {% include 'spinner.html' %}
 {% endblock content %}
