--- a/src/personal/templates/personal/wallet.html
+++ b/src/personal/templates/personal/wallet.html
@@ -96,5 +96,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 <div id="modalContainer">
     {% include 'ModalPopup.html' %}
+    {% include 'spinner.html' %}
 </div>
 {% endblock content %}
