--- a/src/templates/ModalPopup.html
+++ b/src/templates/ModalPopup.html
@@ -35,6 +35,10 @@
         .modal-body label {
             text-align: right;
             margin-right: 10px;
+            text
+        }
+        .modal-body p{
+            text-align: center;
         }
      
     </style>
@@ -50,7 +54,7 @@
                     </button>
                 </div>
                 <div class="modal-body"  style="padding: 10vh;">
-                    <p style="color: black; font-size: 20px;">Do you want to continue with <span id="type">type</span>?</p>
+                    <p style="color: black; font-size: 20px; ">Do you want to continue with <span id="type">type</span>?</p>
 
                     <div class="row">
                         <div class="col-sm-4">
