--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,7 +28,20 @@
                     <a class="nav-link link" href="{% if request.user.is_admin %}/admin{% else %}/lobby{% endif %}">Lobby</a>
                 </li>
                 <li class="nav-item">
+                    {% if request.user.is_admin %}
+                    <li class="nav-item dropdown" id="usersDropdown">
+                        <a class="nav-link link" href="#">
+                            Users
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="usersDropdown" style="left:-98px; margin-top: 5px;">
+                            <a class="dropdown-item" href="{% url 'organizer/signup' %}">Organizer</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'admin/signup' %}">Admin</a>
+                        </div>
+                    </li>
+                    {% else %}
                     <a class="nav-link link" href="/wallet">Balance: P{{ request.user.wallet }}</a>
+                    {% endif %}
                 </li>
                 <li class="nav-item dropdown" id="profileDropdown">
                     <a class="nav-link" href="#">
