Ricky & Friends & Cousinsz

--- a/src/personal/templates/personal/lobby.html
+++ b/src/personal/templates/personal/lobby.html
@@ -15,18 +15,13 @@
   }
   #switch_view{
     background-color: #fd5001;
+    width: 250px;
+    height: 50px;
   }
   #vs{
     margin-top: 75%;
   }
-</style>
-<div class="container-fluid content">
-  <div class="container">
-    <br>
-    <br>
-    <div>
-      <style>
-        .card {
+  .card {
           height: 400px;
         }
         .card-img-top {
@@ -34,9 +29,12 @@
           height: 70vh;
           box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
-        
-      </style>
-      
+</style>
+<div class="container-fluid content">
+  <div class="container">
+    <br>
+    <br>
+    <div>
       <div class="container text-center">
         <div class="row">
           <div class="col-md-4">
@@ -51,9 +49,6 @@
             </a>
           </div>
           
-          
-          
-
         <!-- Local Matches Card -->
         <div class="col-md-4">
           <a href="#local"> <!-- Link to the 'featured' section -->
@@ -86,38 +81,93 @@
       <br><br>
       <br>
     </div>
+    <div class="text-center">
+      <button class="btn" id="switch_view" onclick="toggleView()">Switch View</button>
+    </div>
+    <div class="section-separator"></div>
     <div class="row" id="featured">
       <div class="col-sm-3"></div>
       <div class="col-sm-6 text-center">
         <h2>Featured Matches</h2>
       </div>
-      <div class="col-sm-2 text-start" style="padding-top: 10px;">
-        {% if request.user.is_admin %}
-        <a href="/add-game">+ Add game</a>
-        {% endif %}
-      </div> 
+   
     </div>
     <!-- for loop here -->
-    {% for game in games %}
-    <div class="row">
-      <div class="col-sm-3"></div>
-      <div class="col-sm-2 text-end">
-        <a href="{% url 'game' game.slug %}">
-          <p>{{ game.team_A }}</p>
-          <img src="{{game.logo_A.url}}" width="30px" height="30px" />
-        </a>
+    
+    <div id="teamCarouselFeatured" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        {% for game in games %}
+          {% if forloop.counter0 < 5 %} {# Limiting to 5 items #}
+            <div class="carousel-item {% if forloop.first %}active{% endif %}">
+              <div class="row justify-content-center">
+                <div class="col-sm-5 text-center">
+                  <a href="{% url 'game' game.slug %}">
+                    <img src="{{game.logo_A.url}}" width="300px" height="300px" />
+                  </a>
+                </div>
+                <div class="col-sm-2 text-center">
+                  <a href="{% url 'game' game.slug %}">
+                    <h1 id="vs">VS</h1>
+                  </a>
+                </div>
+                <div class="col-sm-5 text-center">
+                  <a href="{% url 'game' game.slug %}">
+                    <img src="{{game.logo_B.url}}" width="300px" height="300px" />
+                  </a>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+                <div class="col-sm-5 text-center">
+                  <a href="{% url 'game' game.slug %}">
+                    <h5>{{ game.team_A }}</h5>
+                  </a>
+                </div>
+                <div class="col-sm-2">
+                  </a>
+                </div>
+                <div class="col-sm-5 text-center">
+                  <a href="{% url 'game' game.slug %}">
+                    <h5>{{ game.team_B }}</h5>
+                  </a>
+                </div>
+              </div>
+            </div>
+          {% endif %}
+        {% endfor %}
       </div>
-      <div class="col-sm-2 text-center" style="padding-top: 16px;">
-        <p>VS</p>
-      </div>
-      <div class="col-sm-2 text-start">
-        <a href="{% url 'game' game.slug %}">
-          <img src="{{game.logo_B.url}}" width="30px" height="30px" />
-          <p>{{ game.team_B }}</p>
-        </a>
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#teamCarouselFeatured" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true" style="font-size: 2rem; color: white;"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#teamCarouselFeatured" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true" style="font-size: 2rem; color: white;"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    {% endfor %}
+    
+    <div id="normalViewFeatured" style="display: none;">
+      {% for game in games %}
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-2 text-end">
+            <a href="{% url 'game' game.slug %}">
+              <p>{{ game.team_A }}</p>
+              <img src="{{game.logo_A.url}}" width="30px" height="30px" />
+            </a>
+          </div>
+          <div class="col-sm-2 text-center" style="padding-top: 16px;">
+            <a href="{% url 'game' game.slug %}"><p>VS</p></a>
+          </div>
+          <div class="col-sm-2 text-start">
+            <a href="{% url 'game' game.slug %}">
+              <img src="{{game.logo_B.url}}" width="30px" height="30px" />
+              <p>{{ game.team_B }}</p>
+            </a>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+
     <!-- if no featured matches available -->
     {% if not games %}
     <div class="row">
@@ -135,15 +185,13 @@
         <hr>
       </div>
     </div>
-
+    <div class="section-separator"></div>
     <div class="row" id="local">
       <div class="col-sm-3"></div>
       <div class="col-sm-6 text-center">
         <h2>Local Matches</h2>
       </div>
-      <div class="text-center">
-        <button class="btn" id="switch_view" onclick="toggleView()">Switch View</button>
-    </div>
+     
       <div class="col-sm-2 text-start" style="padding-top: 10px;">
         {% if request.user.is_organizer and not request.user.is_admin %}
         <a href="/add-game">+ Add game</a>
@@ -237,6 +285,16 @@
       carouselView.style.display = "none";
       normalView.style.display = "block";
     }
+
+    var carouselView = document.getElementById("teamCarouselFeatured");
+    var normalView = document.getElementById("normalViewFeatured");
+    if (carouselView.style.display === "none") {
+      carouselView.style.display = "block";
+      normalView.style.display = "none";
+    } else {
+      carouselView.style.display = "none";
+      normalView.style.display = "block";
+    }
   }
 </script>
     
@@ -258,7 +316,7 @@
         <hr>
       </div>
     </div>
-
+    <div class="section-separator"></div>
     <div class="row"  id="recent">
       <div class="col-sm-3"></div>
       <div class="col-sm-6 text-center">
@@ -302,7 +360,10 @@
   .carousel-control-next-icon {
     color: white !important;
 }
-
+.section-separator {
+    border-bottom: 1px solid #ccc; 
+    margin: 20px 0; 
+  }
 
 </style>
 {% endblock content %}
