--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,23 +27,21 @@
                 <li class="nav-item">
                     <a class="nav-link link" href="{% if request.user.is_admin %}/admin{% else %}/lobby{% endif %}">Lobby</a>
                 </li>
-                <li class="nav-item">
                     {% if request.user.is_admin %}
                     <li class="nav-item dropdown" id="usersDropdown">
                         <a class="nav-link link" href="#">
                             Users
                         </a>
-                        <div class="dropdown-menu-user" aria-labelledby="usersDropdown" style="left:-98px; margin-top: 5px;">
-                            <a class="dropdown-item" href="{% url 'organizer/signup' %}">Organizer</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'admin/signup' %}">Admin</a>
-                        </div>
+                            <div class="dropdown-menu" aria-labelledby="usersDropdown" style="left:-98px; margin-top: 5px;">
+                                <a class="dropdown-item" href="{% url 'organizer/signup' %}">Organizer</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{% url 'admin/signup' %}">Admin</a>
+                            </div>
                     </li>
                     
                     {% else %}
                     <a class="nav-link link" href="/wallet">Balance: P{{ request.user.wallet }}</a>
                     {% endif %}
-                </li>
                 <li class="nav-item dropdown" id="profileDropdown">
                     <a class="nav-link" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="30px" viewBox="0 0 50 50" version="1.1">
@@ -70,27 +68,18 @@
 
     <script>
         $(document).ready(function(){
-            $("#profileDropdown").on('click', function(event){
-                $(this).toggleClass('show');
-                $(this).find('.dropdown-menu').toggleClass('show');
-            });
-            $(document).on('click', function(event){
-                
-                if (!$(event.target).closest('#profileDropdown').length) {
-                    $(".dropdown-menu").removeClass('show');
-                }
-                if (!$(event.target).closest('#usersDropdown').length) {
-                    $(".dropdown-menu-user").removeClass('show');
-                }
-            });
+    $("#profileDropdown").on('click', function(event){
+        $(this).toggleClass('show');
+        $(this).find('.dropdown-menu').toggleClass('show');
+    });
 
-            $("#usersDropdown").on('click', function(event){
-                $("#usersDropdown").toggleClass('show');
-                $("#usersDropdown").find('.dropdown-menu-user').toggleClass('show');
-            });
+    $("#usersDropdown > .nav-link").on('click', function(event){
+        console.log("click")
+        $("#usersDropdown").toggleClass('show');
+        $("#usersDropdown").find('.dropdown-menu').toggleClass('show');
+    });
+});
 
-           
-        });
     </script>
     <style>
        .dropdown-menu {
@@ -124,7 +113,7 @@
 .dropdown-menu-user {
     position: absolute;
     top: 100%;
-    left: 100;
+    left: 250;
     z-index: 1000;
     display: none;
     float: left;
