--- a/src/personal/templates/personal/addGame.html
+++ b/src/personal/templates/personal/addGame.html
@@ -85,7 +85,7 @@
                     <input type="submit" class="btn btn-secondary" value="Submit"></input>
                 </div>
                 <div class="col-sm-1 text-center">
-                    <a href="/admin" class="btn btn-secondary">Back</a>
+                    <input type="button" class="btn btn-secondary" href="/admin" value="Back">
                 </div>
                 <div class="col-sm-5">
                     <p>{{msg}}</p>
