--- a/src/personal/templates/personal/admin.html
+++ b/src/personal/templates/personal/admin.html
@@ -2,25 +2,34 @@
 
 {% block content %}
 <style>
-    #search, table{
+    #search, table {
         width: 100%;
     }
-    table input{
+    table input {
         width: 100%;
     }
-    .btn{
+    .btn {
         background-color: #fd9801;
     }
-    .btn:hover{
+    .btn:hover {
         background-color: #fd9801;
     }
-    td{
+    td {
         padding-top: 8px;
     }
+    tr:hover {
+        background-color: rgba(253, 152, 1, 0.5); 
+    }
+    #transaction-table th {
+        position: sticky;
+        top: 0;
+        background-color: #fd5001;
+    }
+   
 </style>
 <div class="container-fluid content">
     <br>
-    <div class="row">
+    <div class="row" >
         <div class="col-sm-5">
             <input type="text" id="search">
         </div>
@@ -29,25 +38,106 @@
         </div>
     </div>
     <br>
-    <table class="text-center">
-        <tr class="table-background">
-            <th>User ID</th>
-            <th>Username</th>
-            <th>Request Type</th>
-            <th>Amount</th>
-            <th>Date Requested</th>
-            <th>Date Approved</th>
-            <th></th>
-        </tr>
-        <tr>
-            <td>Test</td>
-            <td>Test</td>
-            <td>Test</td>
-            <td>Test</td>
-            <td>Test</td>
-            <td>Test</td>
-            <td><input type="button" class="btn" value="Check"></td>
-        </tr>
-    </table>
+    <div style=" height: 80vh;
+    overflow: auto;">
+        <table class="text-center" id="transaction-table">
+            <tr class="table-background">
+                <th>User ID</th>
+                <th>Request Type</th>
+                <th>Amount</th>
+                <th>Date Requested</th>
+                <th>Date Approved</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </table>
+    </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var tableBody = document.getElementById('transaction-table');
+        
+        function fetchTransactions() {
+            fetch('/cashiers/get_transactions/', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-CSRFToken': '{{ csrf_token }}'  
+                },
+                body: JSON.stringify({})  
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    tableBody.innerHTML = '<tr class="table-background"><th>Name</th><th>Request Type</th><th>Amount</th><th>Code</th><th>Date Requested</th><th>Date Approved</th><th></th><th></th></tr>';
+                    
+                    data.transactions.forEach(transaction => {
+                        var row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${transaction.firstname} ${transaction.lastname}</td>
+                            <td>${transaction.type}</td>
+                            <td>${transaction.amount}</td>
+                            <td>${transaction.code}</td>
+                            <td>${transaction.created_at}</td>
+                            <td>${transaction.updated_at}</td>
+                            <td>
+                                <input onclick="updateTransactionStatus('${transaction.player_id}','${transaction.code}', 'completed')" style="background-color:green;" type="button" class="btn" value="${transaction.status === 'pending' ? 'Approve' : transaction.status}" ${transaction.status !== 'pending' ? 'disabled' : ''}>
+                            </td>
+                            <td>
+                                <input onclick="updateTransactionStatus('${transaction.player_id}','${transaction.code}', 'cancelled')" style="background-color:red;" type="button" class="btn" value="${transaction.status === 'pending' ? 'Cancel' : 'Cancelled'}" ${transaction.status !== 'pending' ? 'disabled' : ''}>
+                            </td>
+
+                        `;
+                        tableBody.appendChild(row);
+                    });
+                } else {
+                    // Handle error or display a message
+                    console.error(data.message);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+        }
+
+        fetchTransactions();
+    });
+</script>
+
+
+<script>
+    function updateTransactionStatus(id, code, status) {
+        console.log(id)
+        console.log(code)
+        var status = status === 'completed' ? 'completed' : 'cancelled';
+
+        var requestData = {
+            'id': id,
+            'status': status,
+            'code': code,
+        };
+
+        $.ajax({
+            type: 'POST',
+            url: '/cashiers/update_status/',
+            data: JSON.stringify(requestData),
+            contentType: 'application/json',
+            success: function(response) {
+                if (response.success) {
+                    $('#globalModal').modal('show');
+                } else {
+                    alert('Error: ' + response.message);
+                }
+            },
+            error: function(xhr, status, error) {
+                alert('Error: ' + error);
+            }
+        });
+    }
+    </script>
+
+
+{% include 'modal.html' %}
+{% include 'spinner.html' %}
 {% endblock content %}
