--- a/src/templates/ModalPopupdeposit.html
+++ b/src/templates/ModalPopupdeposit.html
@@ -43,24 +43,24 @@
     </style>
 </head>
 <body>
-    <div class="modal fade show" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade show" id="depositModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" style="text-align: center;" id="exampleModalLabel"><span id="type">Type</span> Confirmation</h5>
+                    <h5 class="modal-title" style="text-align: center;" id="exampleModalLabel"><span id="deposittype">Type</span> Confirmation</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">X</span>
                     </button>
                 </div>
                 <div class="modal-body"  style="padding: 10vh;">
-                    <p style="color: black; font-size: 20px; ">Do you want to continue with <span id="type">type</span>?</p>
+                    <p style="color: black; font-size: 20px; ">Do you want to continue with <span id="deposittype">type</span>?</p>
 
                     <div class="row">
                         <div class="col-sm-4">
                             <label for="partnername" style="color: black;">Partner:</label>
                         </div>
                         <div class="col-sm-8">
-                            <input type="text" placeholder="Partner" id="partnername" name="partnername" readonly>
+                            <input type="text" placeholder="Partner" id="depositpartnername" name="partnername" readonly>
                         </div>
                     </div>
 
@@ -69,30 +69,31 @@
                             <label for="amount"  style="color: black;">Amount:</label>
                         </div>
                         <div class="col-sm-8">
-                            <input type="text" placeholder="Amount" id="amount" name="amount" readonly>        
+                            <input type="text" placeholder="Amount" id="depositamount" name="amount" readonly>        
                         </div>
                     </div>
 
                 </div>
                 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="SaveButton" data-dismiss="modal" style="width: 100px;">Yes</button>
+                    <button type="button" class="btn btn-primary" id="depositSaveButton" data-dismiss="modal" style="width: 100px;">Yes</button>
                     <button type="button" class="btn btn-primary" id="closeButton" data-dismiss="modal" style="width: 100px;">No</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" id="modalButton" style="display: none;"></button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#depositModal" id="modalButton" style="display: none;"></button>
 
     <script>
      $(document).ready(function(){
     var transactionCounter = 0;
 
-    $(document).on('click', '#SaveButton', function() {
+    $(document).on('click', '#depositSaveButton', function() {
+        console.log("bang")
         if (transactionCounter === 0) {
             var partnerName = $("#partnername").val();
-            var transactionType = $("#type").text();
+            var transactionType = 'Deposit';
             var amount = $("#amount").val();
             
             var requestData = {
@@ -109,19 +110,21 @@
                 contentType: 'application/json',
                 success: function(response) {
                     transactionCounter++;
-                    $('#myModal').modal('hide');
+                    $('#depositModal').modal('hide');
                     $('#spinner_modal').modal('hide');
                     console.log(response.code);
                     $('#generatedCodeModal #generatedamount').val($('#amount').val());
                     $('#generatedCodeModal #generatedcode').val(response.code);
 
                     setTimeout(function() {
+                        $('#spinner_modal').modal('hide');
+                        $('#depositModal').modal('hide');
                         $('#generatedCodeModal').modal('show');
                     }, 2000); 
                 },
                 error: function(xhr, status, error) {
                     console.error(xhr.responseText);
-                    $('#myModal').modal('hide');
+                    $('#depositModal').modal('hide');
                 }
             });
 
@@ -137,7 +140,7 @@
         $("#partnername").val(data.partnername);
         $("#type").text(data.type);
         $("#amount").val(data.amount);
-        $('#myModal').modal('show'); // Show the modal when data is received
+        $('#depositModal').modal('show'); // Show the modal when data is received
     });
 });
 
