--- a/src/templates/modal.html
+++ b/src/templates/modal.html
@@ -1,26 +1,24 @@
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="globalModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Verification</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <!-- Modal content goes here -->
-          Your withdrawal is being processed.
+           Transaction have been updated!
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        </div>
+          <button class="btn" onclick="closeFunction()" id="CloseButton">Close</button>
+      </div>
       </div>
     </div>
   </div>
   
   <script>
-     $('#withdraw').click(function(event) {
-         event.preventDefault();
-         $('#myModal').modal('show'); // Show the modal
-     });
-  </script>
-  
+    function closeFunction() {
+       location.reload(); 
+   }
+
+</script>
